--- a/snippets/signin-snippet.html
+++ b/snippets/signin-snippet.html
@@ -1,5 +1,5 @@
 <div>
 	<img class="profileimage" src = "{{img}}" alt = "profile image">
-	<a href="anime-site/index.html" onclick="signOut();"><br class="d-none d-md-block"> Sign Out</a>
+	<a href="https://krsudhanshu.github.io/anime-site/" onclick="signOut();"><br class="d-none d-md-block"> Sign Out</a>
 	
 </div>
